# CAMP10_Chatter_detection_Methodes

./: README.md
EMD_HHT/: chatter_hht_pyemd.py  chatter_hht_pyemd__doc.py  chatter_hht_pyemd__doc_typed.py  signal_chatter.py  signal_non_chatter.py
EMD_HHT/Chatter-EMD_HHT/: README.md  pyproject.toml
EMD_HHT/Chatter-EMD_HHT/docs/: index.md
EMD_HHT/Chatter-EMD_HHT/example/: EMD_HHT_Chatter_Detection.py  example.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/: __init__.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/cli/: main.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/lib/: core.py  datatypes.py  emd_preproc.py  hht.py  metrics.py  misc.py  selection.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/models/: signal_examples.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/utils/: signal_chatter.py
EMD_HHT/Chatter-EMD_HHT/src/C_emd_hht/viz/: plotting.py
EMD_HHT/Chatter-EMD_HHT/src/Chatter_EMD_HHT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
EMD_HHT/Chatter-EMD_HHT/tests/: test_api.py
MaxEnt_SPRT/: MaxEnt_SPRT.py  Maxent_Sprt_2.py  maxent_sprt_sim_validation.py
MaxEnt_SPRT/MaxEnt_SPRT/: LICENSE  README.md  pyproject.toml
MaxEnt_SPRT/MaxEnt_SPRT/examples/: example.py
MaxEnt_SPRT/MaxEnt_SPRT/src/MaxEnt_SPRT/: __init__.py
MaxEnt_SPRT/MaxEnt_SPRT/src/MaxEnt_SPRT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MaxEnt_SPRT/MaxEnt_SPRT/src/MaxEnt_SPRT/lib/: classes_user.py  constants_user.py  detector.py  entropy.py  functions_user.py  llr.py  offline.py  original_imports.py  sprt.py  wrappers.py
MaxEnt_SPRT/MaxEnt_SPRT/src/MaxEnt_SPRT/models/: maxent.py  prob.py
MaxEnt_SPRT/MaxEnt_SPRT/src/MaxEnt_SPRT/utils/: opr.py  validation.py
Milling_Synchrosqueezing_sound/: Conceptos_apriori_2.py  FRF_FASE_Visual.py  SSQ_STFT_Chatter_Detection.py  STT_library.py  ft_intuitiva_visual.py  sst_stft.py  stft_demo.py  stft_libreria.py  test_liberia.py  tester_codigo.py
Milling_Synchrosqueezing_sound/Pulido_a_revisar/: ssq_stft_chatter.py  ssqueezing_chatter.py  stft_adapter.py  stft_pipeline.py  test.py
Milling_Synchrosqueezing_sound/Pulido_a_revisar/utils/: algos_min_chatter.py  backend_chatter.py  common_min_chatter.py  stft_core_chatter.py  time_scale_chatter.py  types_chatter.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/: LICENCE.txt  README.md  __init__.py  pyproject.toml
Milling_Synchrosqueezing_sound/SSQ_Chatter/examples/: SSQ_STFT_Chatter_Detection.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/lib/: core.py  detection.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/: __init__.py  ruido.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/compat/: detection.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/legacy/utils/: signal_generators.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/lib/: pipeline_chatter.py  tf_transformers.py  trans_mio.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/utils/: __init__.py  buffer_utils.py  config_defaults.py  configs.ini  fft_utils.py  misc.py  scales.py  ssq_core.py  windows.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/utils/__pycache__/: buffer_utils._buffer-192.py311.1.nbc  buffer_utils._buffer-192.py311.nbi  fft_utils._xifn-367.py311.1.nbc  fft_utils._xifn-367.py311.nbi  misc._zero_denormals-35.py311.1.nbc  misc._zero_denormals-35.py311.2.nbc  misc._zero_denormals-35.py311.nbi  ssq_core._indexed_sum_lin-969.py311.1.nbc  ssq_core._indexed_sum_lin-969.py311.nbi  ssq_core._phase_stft-1091.py311.1.nbc  ssq_core._phase_stft-1091.py311.nbi
Milling_Synchrosqueezing_sound/SSQ_Chatter/src/ssq_chatter/viz/: plotting.py
Milling_Synchrosqueezing_sound/SSQ_Chatter/utils/: tf_windows.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_(last_V)/: __init__.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_(last_V)/compat/: __init__.py  core.py  generators.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_(last_V)/legacy/: __init__.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_(last_V)/lib/: detection_strategies.py  tf_transformers.py  trans_mio.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_(last_V)/utils/: tf_windows.py
Milling_Synchrosqueezing_sound/SSQ_Chatter_C/: README.py  __init__.py
RMS_CV/: pyproject.toml  tester_RMS_CV.py  tester_pivot.py
RMS_CV/examples/: RMS_CV_Chatter_Detection.py  example.py
RMS_CV/src/rms_cv/: __init__.py
RMS_CV/src/rms_cv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RMS_CV/src/rms_cv/lib/: cv_monitor.py
RMS_CV/src/rms_cv/utils/: rms.py  signals.py
RMS_CV/src/rms_cv/viz/: plots.py
(+22 files in other folders)
