[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Chatter-EMD_HHT"
version = "0.4.0"
description = " HHT/EMD para chatter."
readme = "README.md"
authors = [{name = "Enrique Mireles", email = "enrique.mireles-hernandez@ensam.eu"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "EMD-signal>=1.6.0,<2.0.0",
]

[project.scripts]
chatter-emd-hht = "emd_hht.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]