
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MaxEnt_SPRT"
version = "0.1.0"
description = "Detector MaxEnt+SPRT para chatter/early chatter con OPR"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Enrique Mireles", email = "author@example.com" }
]
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.24,<3",
  "matplotlib>=3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["MaxEnt_SPRT*"]

[tool.setuptools.package-data]
"MaxEnt_SPRT" = ["data/*"]
